# helios

./: .clang-format  .gitignore  CMakeLists.txt
src/: Camera.cpp  Camera.hpp  Ray.hpp  Scene.hpp  Sphere.hpp  main.cpp
